--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-fontawesome": "^5.7.0",
     "react-native-simple-radio-button": "^2.7.1",
     "react-native-swiper": "^1.5.13",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.1"
   }
 }
